Fix text-alignment for questions

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,9 +60,9 @@ textarea:focus {
 }
 
 .act-questions {
-    /* display: flex;
+    display: flex;
     align-items: center;
-    font-size: 12px;
+    /* font-size: 12px;
     margin-left: 15px;
     margin-right: 15px;
     flex: 1;
